--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 .page {
     width: 100vw;
     height: 100vh;
@@ -16,14 +17,20 @@
     &__aside {
         width: 282px;
         height: 100%;
-    //     display: flex;
-    //     flex-direction: column;
-    //     justify-content: flex-start;
+
         padding: 20px 24px;
-    //     gap: 12px;
         background-color: #ffffff;
         border-left: 1px solid #f4f4f5;
+
+        // 세로 배치
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        
+        // 간격
+        gap: 12px;
     }
+
     &__main {
         width: calc(100% - 282px);
         height: 100%;
