--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -26,7 +26,7 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        
+
         // 간격
         gap: 12px;
     }
@@ -37,5 +37,11 @@
 
         background-color: #f9f9f9;
         border-right: 1px solid #f4f4f5;
+
+        // How to start 같은 콘텐츠 가운데 정렬
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
     }
 }
