feat: 저장버튼추가

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -36,7 +36,9 @@
         height: 100%;
 
         background-color: #f9f9f9;
+        border-left: 1px solid #f4f4f5;
         border-right: 1px solid #f4f4f5;
+
 
         // How to start 같은 콘텐츠 가운데 정렬
         display: flex;
