--- a/app/board/[id]/page.module.scss
+++ b/app/board/[id]/page.module.scss
@@ -67,10 +67,13 @@
     &__isData {
         width: 100%;
         height: 100%;
-        
+
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
+
+        gap: 16px;
+        overflow-y: scroll;
     }
 }
